--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\pokumari\AppData\Local\Temp\testng-eclipse-412145740\testng-customsuite.xml</span>
+                    <span>C:\Users\pokumari\AppData\Local\Temp\testng-eclipse-399660292\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,6 +103,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="scripts.VerifyBlogComments" hash-for-method="verifyBlogCommentWithFirstName">verifyBlogCommentWithFirstName</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="scripts.VerifyBlogComments" hash-for-method="verifyBlogCommentWithLastName">verifyBlogCommentWithLastName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,12 +135,19 @@
                   <span class="method-name">verifyBlogCommentWithFirstName</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyBlogCommentWithLastName">
+                  </a> <!-- verifyBlogCommentWithLastName -->
+                  <span class="method-name">verifyBlogCommentWithLastName</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pokumari\AppData\Local\Temp\testng-eclipse-412145740\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pokumari\AppData\Local\Temp\testng-eclipse-399660292\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyBlogCommentWithFirstName')
 data.setCell(0, 2, 'scripts.VerifyBlogComments')
-data.setCell(0, 3, 18025);
+data.setCell(0, 3, 47046);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyBlogCommentWithLastName')
+data.setCell(1, 2, 'scripts.VerifyBlogComments')
+data.setCell(1, 3, 7695);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 54 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,11 +242,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyBlogCommentWithFirstName</span>
-                <span class="method-start">9361 ms</span>
+                <span class="method-start">15816 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyBlogCommentWithLastName</span>
+                <span class="method-start">62866 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">27389 ms</span>
+                <span class="method-start">70564 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
